@@ -1,3 +1,7 @@
+2005-04-25    Ping Cheng <pingc@wacom.com>
+	* Updated linuxwacom.sf.net website
+	* Cleaned tablet mapping and resolution code
+
 2005-03-28    Ping Cheng <pingc@wacom.com>
 	* Updated linuxwacom.sf.net website
 	* Released linuxwacom-0.6.7 as beta
